Created america page

--- a/index.html
+++ b/index.html
@@ -4,16 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>My Webpage</title>
+    <link rel="shortcut icon" href="/images/favicon.ico">
+    <title>USA</title>
 </head>
 <body>
-    <!-- Your content goes here -->
-    <h1>Hello World!</h1>
-    <div id="kitty">
-        <img src="images/kitten.jpg" alt="This is a kitten.">
-        <button id="btn">Click me</button>
+<div class="container">
+    <div class="intro">
+        <h1>The United States of America</h1>
+        <p>The United States of America is a country in North America and is frequently labeled as a global superpower. This is because of it's strong economy as well as having a powerful military.</p>
     </div>
+    <div class="cities">
+        <h3>These are some of the <span id="shaunda">largest</span> cities.</h3>
+        <ul>
+            <li>New York</li>
+            <li>Los Angeles</li>
+            <li>Houston</li>
+        </ul>
+    </div>
+    <div class="attractions">
+        <h3>These are some attractions.</h3>
+        <ol>
+            <li>Statue of Liberty</li>
+            <li>Grand Canyon</li>
+            <li>McDonalds near my house</li>
+        </ol>
+    </div>
+    <div class="images">
+        <img src="/images/liberty.jfif" alt="The Statue of Liberty.">
+        <img src="/images/america.jpg" alt="The American Flag.">
+    </div>
+</div>
+<a href="https://www.usa.gov/">Link to official website of the USA!</a>
 </body>
 </html>
